--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,9 @@
         android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/river"
-        tools:context=".MainActivity">
+        android:background="@drawable/river1"
+        tools:context=".MainActivity"
+        >
 
         <TextView
             android:id="@+id/textView"
