--- a/app/src/main/res/layout/activity_game_over.xml
+++ b/app/src/main/res/layout/activity_game_over.xml
@@ -30,6 +30,8 @@
             android:layout_margin="24dp"
             android:text="Play Again"
             android:textSize="18sp"
+            style="@style/GradientButton"
+
 
             />
 
