--- a/app/src/main/res/layout/activity_win.xml
+++ b/app/src/main/res/layout/activity_win.xml
@@ -27,6 +27,7 @@
           app:layout_constraintBottom_toBottomOf="parent"
           android:layout_margin="24dp"
           android:text="Play Again"
+          style="@style/GradientButton"
           android:textSize="18sp" />
 
    </androidx.constraintlayout.widget.ConstraintLayout>
